src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of Issue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Country__c</fullName>
        <label>Current Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_State_Province__c</fullName>
        <label>Current State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Street__c</fullName>
        <label>Current Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Zip_Postal_Code__c</fullName>
        <label>Current Zip/Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Issue__c</fullName>
        <label>Date of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FULL_NAME_AS_IN_PASSPORT_C__c</fullName>
        <label>Full Name as in Passport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_TimeSheet_Filled__c</fullName>
        <label>Last TimeSheet  Filled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Taken__c</fullName>
        <label>Leave Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Subscription__c</fullName>
        <formula>if(OR(Profile.Name=&apos;Basic App&apos;,Profile.Name=&apos;Developer Force One App&apos;),1,if(OR(Profile.Name=&apos;HR One App User&apos;,Profile.Name=&apos;Project Lead Force One App&apos;,Profile.Name=&apos;Sales Force One App&apos;,Profile.Name=&apos;Pre Sales Force One App&apos;),2,0))</formula>
        <label>No. of Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optional_Holiday_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Optional Holiday Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAN_Card_Number__c</fullName>
        <label>PAN Card Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_City__c</fullName>
        <label>Permanent City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Country__c</fullName>
        <label>Permanent Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_State_Province__c</fullName>
        <label>Permanent State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Street__c</fullName>
        <label>Permanent Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permanent_Zip_Postal_C__c</fullName>
        <label>Permanent Zip/Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Id__c</fullName>
        <label>Personal Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Place_of_Issue__c</fullName>
        <label>Place of Issue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <label>Reports to Manager</label>
        <relationshipName>ProjectLead1</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Remarks1__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reports_to_ManagerHR__c</fullName>
        <label>Reports to Manager /HR</label>
        <relationshipName>Reports_to_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>SharingUserId__c</fullName>
        <label>SharingUserId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Unit__c</fullName>
        <label>Sub-Unit</label>
        <picklist>
            <controllingField>Unit__c</controllingField>
            <picklistValues>
                <fullName>CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Leave__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service-Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extentor Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Project_Lead__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
        <sharedTo>
            <role>Admin</role>
            <role>CEO_CFO</role>
            <role>Delivery_Head</role>
            <role>HR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Total_Leave__c</columns>
        <columns>DOB__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>CORE.USERS.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <namedFilters>
        <fullName>User_00N90000004YVfIEAW</fullName>
        <active>true</active>
        <field>User.Reports_to_ManagerHR__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>notEqual</operation>
            <value>Developer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>User_Reports to Manager /HR</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000q14DEAQ_00N90000004XlNoEAK</fullName>
        <active>false</active>
        <field>Project__c.Project_Lead__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Project Lead</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project_Project Lead</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000qBXiEAM_00N90000004Yea4EAC</fullName>
        <active>true</active>
        <field>Resource_Forecast__c.Assigned_User__c</field>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Resource Forecast_Assigned User</name>
    </namedFilters>
    <validationRules>
        <fullName>Date_joining_should_n</fullName>
        <active>false</active>
        <description>Date joining should not be empty for developer</description>
        <errorConditionFormula>AND(  UserRole.Name =&apos;Developer&apos;,  ISBLANK(Date_of_Joining__c ))</errorConditionFormula>
        <errorDisplayField>Date_of_Joining__c</errorDisplayField>
        <errorMessage>Date joining should not be empty for developer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Date_of_Joining</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;Internal User&apos;) ,ISBLANK( Date_of_Joining__c ))</errorConditionFormula>
        <errorDisplayField>Date_of_Joining__c</errorDisplayField>
        <errorMessage>Date of Joining needs to  be filled if the &quot;Type&quot;  is &quot;Internal User&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Reports_to_manager</fullName>
        <active>true</active>
        <description>&apos;Reports to manager&apos; is a mandatory field</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;Internal User&apos;) ,ISBLANK(  Project_Lead__c ))</errorConditionFormula>
        <errorDisplayField>Project_Lead__c</errorDisplayField>
        <errorMessage>&apos;Reports to manager&apos; is a mandatory field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Reports_to_managerHR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;Internal User&apos;) ,ISBLANK(   Reports_to_ManagerHR__c  ))</errorConditionFormula>
        <errorDisplayField>Reports_to_ManagerHR__c</errorDisplayField>
        <errorMessage>&apos;Reports to Manager/HR&apos; is a mandatory field</errorMessage>
    </validationRules>
</CustomObject>